# dotfile_xmonad2

./: .gitignore  .gitmodules  build  build   my-xmonad.cabal  my-xmonad.cabal.old  package.yaml  stack-build  stack.yaml  start-xmonad  startup-hook  trayer-padding-icon.sh  xmobar.hs  xmobarrc  xmobarrc-old  xmonad-session-rc  xmonad.hs
lib/XMonad/Actions/: CycleShiftRecentWS.hs
lib/src/XMonad/Actions/: CycleShiftRecentWS.hs
lib/src/Xmobar/Custom/Plugin/: Battery.hs
xpm/: xmonad-12.xpm  xmonad-13.xpm  xmonad-14.xpm  xmonad-16.xpm  xmonad.xpm
