name:                my-xmonad
version:             0.1.0.0
license:             BSD3
author:              Paul Mbuthia
maintainer:          paulmbuthia754@gmail.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

executable xmonad
  main-is:             ../xmonad.hs
    -- other-modules lists custom modules in my .xmonad/lib/ directory
  other-modules:     XMonad.Actions.CycleShiftRecentWS
  build-depends:     base
                   , containers
                   , data-default
                   , fuzzy
                   , monoid-subclasses
                   , mtl
                   , process
                   , unix
                   , utf8-string
                   , X11
                   , xmonad
                   , xmonad-contrib
  hs-source-dirs:      lib
  default-language:    GHC2021
  ghc-options:         -Wall -threaded -O2
